--- a/pages/onboarding2.html
+++ b/pages/onboarding2.html
@@ -1,11 +1,13 @@
 <div class="div">
     
-    <img
+    <a href="../tnpsc.html">
+      <img
     loading="lazy"
-    src="arrow.png"
+    src="../arrow.png"
     class="img" 
     style="top: 25px"
   />
+    </a>
       <div class="div-3" id="headingFirst">Insight Processing!</div>
     <img
       loading="lazy"
@@ -17,13 +19,13 @@
       study materials and personalized progress tracking.
     </div>
     <div class="div-5" style="display: flex; justify-content: space-between;">
-      <div class="div-6"><a href="C:\Users\tamil\OneDrive\Desktop\htmlfiGma\login.html" style="text-decoration: none;">Skip</a></div>
+      <div class="div-6"><a href="login.html" style="text-decoration: none; color: black; opacity: 56%;">Skip</a></div>
       <div class="div-7">
         <div class="div-8"></div>
         <div class="div-9"></div>
         <div class="div-10"></div>
       </div>
-          <div class="div-11"><a href="C:\Users\tamil\OneDrive\Desktop\htmlfiGma\onboarding3.html" style="text-decoration: none; color: white;">Next</a></div>
+          <div class="div-11"><a href="./onboarding3.html" style="text-decoration: none; color: white;">Next</a></div>
     </div>
   </div>
   <style>
