--- a/pages/onboarding3.html
+++ b/pages/onboarding3.html
@@ -1,5 +1,12 @@
 <div class="div">
-  <img loading="lazy" src="arrow.png" class="img" style="top: 25px" />
+  <a href="onboarding2.html">
+    <img
+  loading="lazy"
+  src="../arrow.png"
+  class="img" 
+  style="top: 25px"
+/>
+</a>
   <div class="div-3" id="headingFirst">Let's rock your exams!</div>
   <img loading="lazy"
     srcset="https://cdn.builder.io/api/v1/image/assets/TEMP/affff122-599a-453b-a368-c86dd4e9e152?apiKey=8ac1f9828cb8426b911e092b26646aa4&width=100 100w, https://cdn.builder.io/api/v1/image/assets/TEMP/affff122-599a-453b-a368-c86dd4e9e152?apiKey=8ac1f9828cb8426b911e092b26646aa4&width=200 200w, https://cdn.builder.io/api/v1/image/assets/TEMP/affff122-599a-453b-a368-c86dd4e9e152?apiKey=8ac1f9828cb8426b911e092b26646aa4&width=400 400w, https://cdn.builder.io/api/v1/image/assets/TEMP/affff122-599a-453b-a368-c86dd4e9e152?apiKey=8ac1f9828cb8426b911e092b26646aa4&width=800 800w, https://cdn.builder.io/api/v1/image/assets/TEMP/affff122-599a-453b-a368-c86dd4e9e152?apiKey=8ac1f9828cb8426b911e092b26646aa4&width=1200 1200w, https://cdn.builder.io/api/v1/image/assets/TEMP/affff122-599a-453b-a368-c86dd4e9e152?apiKey=8ac1f9828cb8426b911e092b26646aa4&width=1600 1600w, https://cdn.builder.io/api/v1/image/assets/TEMP/affff122-599a-453b-a368-c86dd4e9e152?apiKey=8ac1f9828cb8426b911e092b26646aa4&width=2000 2000w, https://cdn.builder.io/api/v1/image/assets/TEMP/affff122-599a-453b-a368-c86dd4e9e152?apiKey=8ac1f9828cb8426b911e092b26646aa4&"
@@ -10,7 +17,7 @@
       step of the way to your results!!!
     </p>
   </div>
-  <div class="div-5"><a href="C:\Users\tamil\OneDrive\Desktop\htmlfiGma\login.html"
+  <div class="div-5"><a href="login.html"
       style="text-decoration: none; color: white;">Get Started</a></div>
 </div>
 <style>
