--- a/tnpsc.html
+++ b/tnpsc.html
@@ -23,13 +23,13 @@
     <span style="color: rgba(0, 0, 0, 1)">now!</span>
   </div>
   <div class="div-5" style="display: flex; justify-content: space-between;">
-    <div class="div-6"><a href="./pages/login.html" style="text-decoration: none; color: black; opacity: 56%;">Skip</a></div>
+    <div class="div-6">Skip</div>
     <div class="div-7">
       <div class="div-8"></div>
       <div class="div-9"></div>
       <div class="div-10"></div>
     </div>
-    <div class="div-11"><a href="./pages/onboarding2.html" style="text-decoration: none; color: white;">Next</a></div>
+    <div class="div-11">Next</div>
   </div>
 </div>
 <style>
